Changed exec to ProcessBuilder